{
    "name": "TouchInput",
    "maps": [
        {
            "name": "=Touch",
            "id": "d723f842-efaf-4500-a339-e1190f1e9acb",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "1f8f77a8-2cbc-411e-ad60-f2e97ce77243",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchStartPosition",
                    "type": "Value",
                    "id": "bd40a192-ad9a-404f-b8fb-8dc77ddc98c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchEndPosition",
                    "type": "Value",
                    "id": "5cd3c71c-b75b-4a32-8b71-6c84bed1da9d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ec76c03-1882-4d2f-8e0c-abb6a7b8d921",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStartPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34d5a286-e3ba-4d16-a79f-a24ef6aa108c",
                    "path": "<Mouse>/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStartPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1857f47-a858-47a0-912c-d49dfde1be89",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "959cf5f5-5461-4c7c-99a8-87f7b220daa4",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddbb1942-8710-4909-8c37-9014fa37b8c6",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchEndPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}